# SOFG1008-T1-TAWORKSHOP

./: README.md  main.py  result-testing.json  result.json  setup.cfg
features/: add_task_to_do_list.feature  change_status_to_do_list.feature  clear_to_do_list.feature  delete_task_to_do_list.feature  filter_to_do_list_date.feature  filter_to_do_list_priority.feature  mark_task_to_do_list.feature  result.json  show_all_task_to_do_list.feature  to_do_list.feature
features/steps/: scn1_add_task.py  scn2_list_task.py  scn3_mark_task.py  scn4_clear_todolist.py  scn5_search_by_date.py  scn6_change_status_task.py  scn7_non_exist_prio.py  snc8_delete_task.py
src/: main.py
src/task/: task.py
src/todo/: todo.py
