[metadata]
name = todolist
version = 1.0
author = T1
author_email = T1_horta@gmail.com
description = This is a project for a workshop
long_description = file: README.md
long_description_content_type = text/markdown
url = yourprojecturl.com
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
package_dir=
    =src
install_requires =
    behave==1.2.6



    
